修改部分常量

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>music-spider</module>
         <module>music-common</module>
         <module>music-admin</module>
+        <module>music-server</module>
+        <module>music-gengrator</module>
     </modules>
 
 </project>
