修改完善music-client-vue功能（收藏...）、music-server修正接口

--- a/music-server/src/main/resources/application.properties
+++ b/music-server/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.devtools.restart.exclude=WEB-INF/**
 #logging.level.org.springframework.boot.autoconfigure=ERROR
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+#允许循环依赖
+spring.main.allow-circular-references=true
