设计music-cf数据库，创建dubbo公共接口和实体、kafka传输对象

--- a/music-server/pom.xml
+++ b/music-server/pom.xml
@@ -25,6 +25,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>club.jming</groupId>
+            <artifactId>music-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.22</version>
