--- a/music-admin/pom.xml
+++ b/music-admin/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>club.jming</groupId>
-	<artifactId>renren-admin</artifactId>
+	<artifactId>music-admin</artifactId>
 	<version>3.0.0</version>
-	<packaging>jar</packaging>
-	<description>renren-fast</description>
+	<description>music-admin</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.4.RELEASE</version>
+        <relativePath></relativePath>
 	</parent>
 
 	<properties>
