--- a/music-generator/pom.xml
+++ b/music-generator/pom.xml
@@ -12,6 +12,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.6.RELEASE</version>
+<!--        加上这个，不会报错，原因未知-->
+        <relativePath></relativePath>
     </parent>
 
     <properties>
