--- a/music-server/pom.xml
+++ b/music-server/pom.xml
@@ -24,6 +24,13 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.8.4</version>
+        </dependency>
+
         <dependency>
             <groupId>club.jming</groupId>
             <artifactId>music-api</artifactId>
