--- a/music-server/pom.xml
+++ b/music-server/pom.xml
@@ -24,6 +24,19 @@
 
     <dependencies>
 
+<!--        &lt;!&ndash; 引入dubbo的依赖 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.spring.boot</groupId>-->
+<!--            <artifactId>dubbo-spring-boot-starter</artifactId>-->
+<!--            <version>2.0.0</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; 引入zookeeper的依赖 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.101tec</groupId>-->
+<!--            <artifactId>zkclient</artifactId>-->
+<!--            <version>0.10</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>club.jming</groupId>
             <artifactId>music-api</artifactId>
